sql/test/unit/checks/reactive_view_add_existing_fail.exp
CREATE TABLE IF NOT EXISTS test(x integer);
DELETE FROM TEST;
INSERT INTO test VALUES (-10);
CREATE REACTIVE VIEW testpos AS SELECT CHECK(x > 0) FROM test;
^
|
 ----- ERROR
Error: line 4, character 0:
Failed constraint: x > 0
